--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <main class="container">
       <form>
-        <h1>Login Page</h1>
+        <h1>Login Model</h1>
         <div class="input-box">
-          <span>👤</span>
           <input placeholder="User" type="text">
+          <span>👤</span>
         </div>
         <div class="input-box">
-          <span>🔒</span>
           <input placeholder="Password" type="password">
+          <span>🔒</span>
         </div>
 
-        <div>
+        <div class="remember-forgot">
             <label>
                 <input type="checkbox">
                 Remember Password
-                <a href="#" Remember Password</a>
             </label>
-            
+            <a href="#">Forgot Password</a>
+        </div>
+            <button type="submit" class="login">Login</button>
+        <div class="register-link">
+            <p>Dont have an account? <a href="#">Register Here</p>
         </div>
 
       </form>
