--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +17,11 @@
         <h1>Login Model</h1>
         <div class="input-box">
           <input placeholder="User" type="text">
-          <span>👤</span>
+          <span class="fas fa-user"></span>
         </div>
         <div class="input-box">
           <input placeholder="Password" type="password">
-          <span>🔒</span>
+          <span class="fas fa-lock"></span>
         </div>
 
         <div class="remember-forgot">
